prevent onmouseover for addthis menu / prevent horizontal scrolling for iframe forms

--- a/Resources/Private/SASS/phlu.scss
+++ b/Resources/Private/SASS/phlu.scss
@@ -6793,6 +6793,7 @@ body {
   //
   .atm {
     .atm-i {
+      display: none;
       border: 0;
       box-shadow: none;
       .atm-s {
